# kanban_board

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  set_env.bat
alembic/: env.py
alembic/versions/: 1ebf78adc551_start.py  28b888167d07_start.py  2fff6f32a0b3_make_user_fields_nullable.py  5dd5a5d87db1_start.py  78eb80542faf_add_a_column.py  cce019417697_c.py
src/: main.py  settings.py
src/core/: example.py
src/core/services/: auth.py  auth_for_users.py  db.py
src/crud/: columns.py  example.py  project_users.py  projects.py  task_logs.py  tasks.py  users.py
src/infrastructure/: jaminstance.py  jwt_backend.py
src/models/: __init__.py  column.py  project.py  project_user.py  task.py  task_log.py  user.py
src/routers/: __init__.py
src/routers/v1/: __init__.py  auth.py  columns.py  example.py  project_users.py  projects.py  task_logs.py  tasks.py  users.py
src/schemas/: columns.py  project_users.py  projects.py  task_logs.py  tasks.py  users.py
