[project]
name = "kanban-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "fastapi>=0.115.12",
    "jamlib>=1.0.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pyjokes>=0.8.3",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.39",
    "tinydb>=4.8.2",
    "uvicorn>=0.34.0",
]

